--- a/demo.ipynb
+++ b/demo.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Example of running model\n",
-    "In this example, the model is run for the study case documented in Leppä et al. (2022). The applied environmental forcing (see [data/forcing_readme.txt](data/forcing_readme.txt)) consist of half-hourly data for 2018-2019."
+    "In this example, the model is run for the study case documented in Leppä et al. (*in press*). The applied environmental forcing (see [data/forcing_readme.txt](data/forcing_readme.txt)) consist of half-hourly data for 2018-2019."
    ]
   },
   {
